# blaze

./: README.md  build.gradle.kts
.github/: copilot-instructions.md
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/blurr/voice/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/java/com/blaze/agent/: AgentOrchestrator.kt  AssistEntryActivity.kt  AudioWaveView.kt  BaseNavigationActivity.kt  ChatActivity.kt  ChatAdapter.kt  ConversationalAgentService.kt  DialogueActivity.kt  GlowBorderView.kt  LoginActivity.kt.kt  MainActivity.kt  MemoriesActivity.kt  MemoriesAdapter.kt  MemoriesFragment.kt  MomentsActivity.kt  MomentsAdapter.kt  MomentsFragment.kt  MyApplication.kt  OnboardingPermissionsActivity.kt  PandaWidgetProvider.kt  PermissionsActivity.kt  PrivacyActivity.kt  ProPurchaseActivity.kt  RoleRequestActivity.kt  ScreenInteractionService.kt  SettingsActivity.kt  TaskLogDetailsActivity.kt  TaskLogsListActivity.kt
app/src/main/java/com/blaze/agent/accessibility/: BlazeAccessibilityService.kt
app/src/main/res/layout/: activity_main_content.xml  assistant_session_view.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  shortcuts.xml  voice_interaction_service.xml
app/src/test/java/com/blurr/voice/: ConversationalAgentServiceTest.kt  ExampleUnitTest.kt  VersionManagementTest.kt  WakeWordButtonRelocationTest.kt
docs/: TRIGGER_SYSTEM.md
gradle/: libs.versions.toml
(+100 files in other folders)
